--- a/www-src/dataplay-ui/app/views/home.html
+++ b/www-src/dataplay-ui/app/views/home.html
@@ -5,9 +5,9 @@
 	<div class="list-group-item row" ng-repeat="item in lastVisited">
 		<span class="col-md-9">{{item.title}}</span>
 		<span class="col-md-3 text-right">
-			<a class="btn btn-danger btn-xs" ng-href="/charts/{{item.guid}}/{{item.info.type}}/{{item.info.x}}/{{item.info.y}}" ng-show="item.info != null">Chart</a>
-			<a class="btn btn-warning btn-xs" ng-href="/overview/{{item.guid}}">Overview</a>
-			<a class="btn btn-primary btn-xs" ng-href="/map/{{item.guid}}" ng-show="item.map">Map</a>
+			<a class="btn btn-danger btn-xs" href="charts/{{item.guid}}/{{item.info.type}}/{{item.info.x}}/{{item.info.y}}" ng-show="item.info != null">Chart</a>
+			<a class="btn btn-warning btn-xs" href="overview/{{item.guid}}">Overview</a>
+			<a class="btn btn-primary btn-xs" href="map/{{item.guid}}" ng-show="item.map">Map</a>
 		</span>
 	</div>
 </div>
@@ -18,5 +18,5 @@
 </div>
 
 <p>
-	<a class="btn btn-lg btn-primary" href="/search" role="button">Search Data</a>
+	<a class="btn btn-lg btn-primary" href="search" role="button">Search Data</a>
 </p>
