Add sidebar to search view

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -110,7 +110,7 @@
 		}
 	}
 
-	.breadcrumb, .observations .title {
+	.breadcrumb {
 		border-radius: 0;
 		-webkit-border-bottom-right-radius: 4px;
 		-webkit-border-bottom-left-radius: 4px;
