--- a/www-src/dataplay-ui/app/styles/sidebar.less
+++ b/www-src/dataplay-ui/app/styles/sidebar.less
@@ -6,12 +6,14 @@
 	padding: 0;
 	width: 263px;
 
-	-webkit-border-bottom-right-radius: 4px;
-	-webkit-border-bottom-left-radius: 4px;
-	-moz-border-radius-bottomright: 4px;
-	-moz-border-radius-bottomleft: 4px;
-	border-bottom-right-radius: 4px;
-	border-bottom-left-radius: 4px;
+	&, .title {
+		-webkit-border-bottom-right-radius: 4px;
+		-webkit-border-bottom-left-radius: 4px;
+		-moz-border-radius-bottomright: 4px;
+		-moz-border-radius-bottomleft: 4px;
+		border-bottom-right-radius: 4px;
+		border-bottom-left-radius: 4px;
+	}
 
 	.row {
 		margin: 0 3px;
@@ -40,6 +42,12 @@
 			.pull-left {
 				margin-right: 0;
 			}
+		}
+
+		.thumbnail {
+			max-width: 100%;
+			max-height: 150px;
+			margin: 0 auto;
 		}
 
 		.media-heading {
