--- a/www-src/dataplay-ui/app/styles/sidebar.less
+++ b/www-src/dataplay-ui/app/styles/sidebar.less
@@ -19,6 +19,16 @@
 		margin: 0 3px;
 	}
 
+	.highlight {
+		border-radius: 4px;
+		-webkit-animation-name: highlight;
+		-webkit-animation-duration: 6s;
+		-webkit-animation-timing-function: ease;
+		-webkit-animation-iteration-count: infinite;
+		-webkit-animation-direction: alternate;
+		-webkit-animation-play-state: running;
+	}
+
 	.title {
 		font-weight: 600;
 		padding: 8px 15px;
@@ -92,4 +102,10 @@
 			font-size: 12px;
 		}
 	}
+}
+
+@-webkit-keyframes highlight {
+		0%   {background: transparent;}
+		25%  {background: rgb(255, 236, 158);}
+		100% {background: transparent;}
 }
