Added comments on Tooltip.

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -46,6 +46,12 @@
 	}
 }
 
+.tooltip {
+	.tooltip-inner {
+		text-align: left;
+	}
+}
+
 .charts {
 	.constrict-graphs {
 		.dc-chart {
@@ -68,6 +74,14 @@
 			&.range g.y {
 				display: none;
 			}
+
+			g.observations {
+				image {
+					cursor: pointer;
+					cursor: hand;
+				}
+			}
+
 		}
 	}
 
