Correlated Charts API merges.

--- a/www-src/dataplay-ui/app/views/charts/correlated/lineRanged.html
+++ b/www-src/dataplay-ui/app/views/charts/correlated/lineRanged.html
@@ -27,7 +27,7 @@
 	dc-post-setup-chart="lineChartPostSetup"
 ></div>
 
-<a ng-show="chart.type == 'line'" href="#" class="pull-right" ng-click="resetAll()">Reset</a>
+<a ng-show="chart.type == 'line'" href="#" class="label label-primary pull-right" ng-click="resetAll()">Reset</a>
 
 <div class="dc-chart chartSwitch range"
 	ng-show="chart.type == 'line'"
