Add more rows to search page

--- a/www-src/dataplay-ui/app/styles/sidebar.less
+++ b/www-src/dataplay-ui/app/styles/sidebar.less
@@ -57,7 +57,6 @@
 		.thumbnail {
 			max-width: 100%;
 			max-height: 150px;
-			margin: 0 auto;
 		}
 
 		.media-heading {
@@ -105,7 +104,13 @@
 }
 
 @-webkit-keyframes highlight {
-		0%   {background: transparent;}
-		25%  {background: rgb(255, 236, 158);}
-		100% {background: transparent;}
+	0% {
+		background: transparent;
+	}
+	25% {
+		background: rgb(255, 236, 158);
+	}
+	100% {
+		background: transparent;
+	}
 }
