--- a/www-src/dataplay-ui/app/views/search.html
+++ b/www-src/dataplay-ui/app/views/search.html
@@ -1,4 +1,6 @@
-<h1>Search</h1>
+<div class="row total-results">
+	<span ng-class="{true: '', false: 'notvisible'}[totalResults > 0]">{{totalResults}} results found</span>
+</div>
 
 <div class="row">
 	<div class="col-sm-9 col-xs-12">
@@ -8,19 +10,21 @@
 			</div>
 		</form>
 
-		<div class="list-group" ng-show="results.length > 0">
-			<div class="row">
-				<div class="list-group-item col-sm-4" ng-repeat="result in results | limitTo:3">
-					<h5>{{result.Title}}</h5>
-					<div style="width: 100%; height: 150px; background-color:rgb(61, 61, 255); border-radius:10px;">
-						<!-- GRAPH GOES HERE!! -->
+		<div class="list-group search-results" ng-show="results.length > 0">
+			<div class="row" ng-repeat="row in results | limitTo: rowLimit">
+				<div class="list-group-item col-sm-4" ng-repeat="result in row">
+					<div class="media-heading">
+						<h5>{{result.Title}}</h5>
 					</div>
-					<p class="text-right">
-						<a class="btn btn-danger btn-xs" href="charts/{{result.GUID}}">Chart</a>
-						<a class="btn btn-warning btn-xs" href="overview/{{result.GUID}}">Overview</a>
-						<a class="btn btn-primary btn-xs" href="map/{{result.GUID}}" ng-show="result.LocationData">Map</a>
-					</p>
+					<div class="media-body">
+						<div style="width: 100%; height: 150px; background-color:rgb(61, 61, 255); border-radius:10px;">
+							<!-- GRAPH GOES HERE!! -->
+						</div>
+					</div>
 				</div>
+			</div>
+			<div class="row show-more" ng-click="showMore()">
+				<button class="col-md-6 col-md-offset-3 btn btn-default text-center">Show More</button>
 			</div>
 		</div>
 	</div>
@@ -28,21 +32,21 @@
 		<div class="sidebar">
 			<div class="title">Overview</div>
 
-				<div class="content">
-					<div class="media" ng-repeat="item in overview">
-						<div class="row">
-							<span class="text-muted"><small>{{item.date}}</small></span>
-						</div>
-						<div class="row">
-							<div class="media-body">
-								<h5 class="media-heading">{{item.title}}</h5>
-								<img class="thumbnail" ng-src="{{item.thumbnail}}" />
-							</div>
+			<div class="content">
+				<div class="media" ng-repeat="item in overview">
+					<div class="row">
+						<span class="text-muted"><small>{{item.date}}</small></span>
+					</div>
+					<div class="row">
+						<div class="media-body">
+							<h5 class="media-heading">{{item.title}}</h5>
+							<img class="thumbnail" ng-src="{{item.thumbnail}}" />
 						</div>
 					</div>
 				</div>
+			</div>
 
-				<div class="nothing" ng-hide="overview.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
+			<div class="nothing" ng-hide="overview.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
 
 		</div>
 	</div>
