--- a/www-src/dataplay-ui/app/views/search.html
+++ b/www-src/dataplay-ui/app/views/search.html
@@ -11,7 +11,7 @@
 		</form>
 
 		<div class="list-group search-results" ng-show="results.length > 0">
-			<div class="row" ng-repeat="row in results | limitTo: rowLimit">
+			<div class="row" ng-repeat="row in rowedResults | limitTo: rowLimit">
 				<div class="list-group-item col-sm-4" ng-repeat="result in row">
 					<div class="media-heading">
 						<h5>{{result.Title}}</h5>
