Show mini line graphs on overview screen

--- a/www-src/dataplay-ui/app/styles/overviewscreen.less
+++ b/www-src/dataplay-ui/app/styles/overviewscreen.less
@@ -1,3 +1,27 @@
 .label-purple {
 	background-color: #CAA8D9;
 }
+
+.overviewscreen-section {
+	padding: 0 5px;
+	vertical-align: middle;
+
+	.overviewscreen-list {
+		margin: 0;
+
+		svg {
+			width: 100%;
+		}
+	}
+
+	.overviewscreen-li {
+		margin: 0;
+		vertical-align: middle;
+		border-top: 1px solid rgba(0, 0, 0, 0.15);
+	}
+
+	.overviewscreen-sect-header {
+		font-weight: bold;
+	}
+
+}
