--- a/www-src/dataplay-ui/app/views/overviewscreen.html
+++ b/www-src/dataplay-ui/app/views/overviewscreen.html
@@ -4,15 +4,29 @@
 
 	<div class="col-sm-9 col-xs-12">
 		<div class="row">
-			<div class="col-xs-4" ng-repeat="sect in mainsections">
+			<div class="col-xs-4 overviewscreen-section" ng-repeat="sect in mainsections | limitTo: 3">
 				<h4 class="text-center">{{sect.title}}</h4>
 				<div class="row">
 					<!-- grpah here -->
-					graph
+					<div style="margin-left: 25%; width: 50%; height: 150px; background-color:rgb(61, 61, 255); border-radius:10px;">
+						<!-- GRAPH GOES HERE!! -->
+					</div>
 				</div>
-				<div class="row">
-					<!-- list here -->
-					list
+				<div class="row overviewscreen-list">
+
+					<div class="row overviewscreen-sect-header">
+						<div class="col-xs-8"><small>{{sect.colNameA}}</small></div>
+						<div class="col-xs-4"><small>{{sect.colNameB}}</small></div>
+					</div>
+
+					<div class="row overviewscreen-li" ng-repeat="item in sect.items">
+						<div class="col-xs-8"><small>{{item.term}}</small></div>
+						<div class="col-xs-4">
+							<span>
+								<div class="dc-chart chartSwitch line" ng-attr-id="linegraph-{{item.id}}" dc-chart="lineChart" dc-width="60" dc-height="20" dc-margins="{{margin}}" dc-mouse-zoomable="false" dc-brush-on="false" dc-elastic-y="true" dc-transition-duration="500" dc-colors="d3.scale.category20()" dc-render-data-points="true" dc-render-area="true" dc-post-setup-chart="renderLine(item)"></div>
+							</span>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -24,16 +38,13 @@
 
 			<div class="content">
 				<div class="media" ng-repeat="sect in sidebarsections">
-					<h5>{{sect.title}}</h5>
-					<div class="row" ng-repeat="item in sect.items">
-
-
-						<p class="item"><span class="label label-primary label-purple">{{item.count}}</span>&nbsp;&nbsp;{{item.title}}</p>
-
-
+					<h5>{{sect.category}}</h5>
+					<div class="row" ng-repeat="item in sect.top5">
+						<p class="item" ng-show="item.amount > 0"><span class="label label-primary label-purple">{{item.amount}}</span>&nbsp;&nbsp;{{item.term}}</p>
 					</div>
-					<div class="nothing" ng-hide="sect.items.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
+					<div class="nothing" ng-hide="sect.top5.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
 				</div>
+				<div class="nothing" ng-hide="sidebarsections.length > 0"><p class="text-center text-muted">Nothing to show</p></div>
 			</div>
 
 
