Attach pie charts to sections on overview screen

--- a/www-src/dataplay-ui/app/styles/overviewscreen.less
+++ b/www-src/dataplay-ui/app/styles/overviewscreen.less
@@ -24,4 +24,14 @@
 		font-weight: bold;
 	}
 
+	.overviewscreen-sect-graph {
+		height: 150px;
+	}
+
+	.dc-chart.pie {
+		float: none;
+		text-align: center;
+	}
+
+
 }
