--- a/www-src/dataplay-ui/app/styles/overviewscreen.less
+++ b/www-src/dataplay-ui/app/styles/overviewscreen.less
@@ -2,41 +2,50 @@
 	background-color: #CAA8D9;
 }
 
-.overviewscreen-section {
-	padding: 0 5px;
-	vertical-align: middle;
+.overviewscreen {
+	padding: 30px 0 0 0;
 
-	.overviewscreen-list {
-		margin: 0;
+	.overviewscreen-section {
+		padding: 0 5px;
+		vertical-align: middle;
 
-		svg {
-			width: 100%;
+		.loading {
+			margin: 0 auto;
+		}
+
+		.overviewscreen-list {
+			margin: 0;
+
+			svg {
+				width: 100%;
+			}
+		}
+
+		.overviewscreen-li {
+			margin: 0;
+			vertical-align: middle;
+			border-top: 1px solid rgba(0, 0, 0, 0.15);
+		}
+
+		.overviewscreen-sect-header {
+			font-weight: bold;
+		}
+
+		.overviewscreen-sect-graph {
+			height: 200px;
+			padding: 25px 0 0 0;
+		}
+
+		.dc-chart.pie {
+			float: none;
+			text-align: center;
 		}
 	}
 
-	.overviewscreen-li {
-		margin: 0;
-		vertical-align: middle;
-		border-top: 1px solid rgba(0, 0, 0, 0.15);
-	}
-
-	.overviewscreen-sect-header {
-		font-weight: bold;
-	}
-
-	.overviewscreen-sect-graph {
-		height: 150px;
-	}
-
-	.dc-chart.pie {
-		float: none;
-		text-align: center;
-	}
-
 }
-
 .overviewscreen-sb {
 	.item {
 		margin: 0;
 	}
 }
+
