--- a/www-src/dataplay-ui/app/views/search.html
+++ b/www-src/dataplay-ui/app/views/search.html
@@ -14,7 +14,7 @@
 			<div class="row" ng-repeat="row in rowedResults | limitTo: rowLimit">
 				<div class="list-group-item col-sm-4" ng-repeat="result in row">
 					<div class="media-heading">
-						<h5>{{result.Title}}</h5>
+						<h5><a ng-href="overview/{{result.GUID}}">{{result.Title}}</a></h5>
 					</div>
 					<div class="media-body">
 						<div ng-if="row.graph.length > 0" class="dc-chart chartSwitch line" dc-chart="lineChart" dc-width="200" dc-height="150" dc-margins="{{margin}}" dc-mouse-zoomable="false" dc-brush-on="false" dc-elastic-y="true" dc-transition-duration="500" dc-colors="d3.scale.category20()" dc-render-data-points="true" dc-render-area="true" dc-post-setup-chart="lineChartPostSetup(row)" ></div>
@@ -34,13 +34,13 @@
 				<div class="media" ng-repeat="item in overview">
 					<div class="row">
 						<span class="text-muted"><small>{{item.date}}</small></span>
-						<span class="pull-right collapsebtn" ng-show="item.show" ng-click="collapse(item)"><small><i class="glyphicon glyphicon-minus-sign"></i></small></span>
-						<span class="pull-right collapsebtn" ng-show="!item.show" ng-click="uncollapse(item)"><small><i class="glyphicon glyphicon-plus-sign"></i></small></span>
+						<span class="pull-right collapsebtn" ng-if="item.show !== false" ng-click="collapse(item)"><small><i class="glyphicon glyphicon-minus-sign"></i></small></span>
+						<span class="pull-right collapsebtn" ng-if="item.show === false" ng-click="uncollapse(item)"><small><i class="glyphicon glyphicon-plus-sign"></i></small></span>
 					</div>
 					<div class="row">
 						<div class="media-body">
 							<h5 class="media-heading"><a ng-href="{{item.url}}">{{item.title}}</a></h5>
-							<a ng-show="item.show" ng-href="{{item.url}}"><img class="thumbnail" ng-src="{{item.thumbnail}}" /></a>
+							<a ng-if="item.show !== false" ng-href="{{item.url}}"><img class="thumbnail" ng-src="{{item.thumbnail}}" /></a>
 						</div>
 					</div>
 				</div>
