UI Fixes on Ovewview & Search page.

--- a/www-src/dataplay-ui/app/styles/overviewscreen.less
+++ b/www-src/dataplay-ui/app/styles/overviewscreen.less
@@ -40,6 +40,12 @@
 			float: none;
 			text-align: center;
 		}
+
+		.dc-chart.line {
+			g.axis.x, g.axis.y {
+				display: none;
+			}
+		}
 	}
 
 }
