--- a/www-src/dataplay-ui/app/views/overview.html
+++ b/www-src/dataplay-ui/app/views/overview.html
@@ -40,7 +40,7 @@
 
 		<div class="col-md-12" ng-show="!loading.related && hasRelatedCharts() <= 0">
 			<div class="jumbotron">
-				<p>Sorry we are unable to generate any Related data for given set.</p>
+				<p class="text-center">Sorry we are unable to generate any Related data for given set.</p>
 			</div>
 		</div>
 
