--- a/www-src/dataplay-ui/app/views/search.html
+++ b/www-src/dataplay-ui/app/views/search.html
@@ -1,4 +1,4 @@
-<div class="row total-results">
+<div class="row total-results" ng-init="init()">
 	<span ng-class="{true: '', false: 'notvisible'}[totalResults > 0]">{{totalResults}} results found</span>
 </div>
 
@@ -25,7 +25,12 @@
 				<button class="col-md-6 col-md-offset-3 btn btn-default text-center">Show More</button>
 			</div>
 		</div>
+
+		<div class="jumbotron" ng-show="results.length <= 0 && query.length > 0">
+			<p class="text-center">Sorry we are unable to find any search results for given request.</p>
+		</div>
 	</div>
+
 	<div class="col-sm-3 col-xs-0">
 		<div class="sidebar">
 			<div class="title">Overview</div>
