Charts rendering on Overview Grid is stable. UI fixes.

--- a/www-src/dataplay-ui/app/styles/charts.less
+++ b/www-src/dataplay-ui/app/styles/charts.less
@@ -61,6 +61,12 @@
 				width: 100%;
 			}
 
+			&.pie {
+				svg {
+					height: 700px;
+				}
+			}
+
 			&.line {
 				g.x {
 					// display: none
