--- a/www-src/dataplay-ui/app/styles/layout.less
+++ b/www-src/dataplay-ui/app/styles/layout.less
@@ -23,6 +23,18 @@ body > .container {
 	}
 }
 
+.home {
+	.list-group-item {
+		cursor: pointer;
+		cursor: hand;
+	}
+	.list-group-item:hover, .list-group-item:focus {
+		text-decoration: none;
+		color: #555555;
+		background-color: #ecf0f1;
+	}
+}
+
 .list-group, .overview {
 	.row {
 		margin-left: 0;
