--- a/www-src/dataplay-ui/app/views/overviewscreen.html
+++ b/www-src/dataplay-ui/app/views/overviewscreen.html
@@ -1,9 +1,9 @@
 <div class="row" ng-init="init()">
 	<div class="col-sm-9 col-xs-12">
 		<div class="row overviewscreen">
-			<div class="col-xs-4 overviewscreen-section" ng-repeat="sect in mainSections | limitTo: 3">
+			<div class="col-xs-4 section" ng-repeat="sect in mainSections | limitTo: 3">
 				<h4 class="text-center">{{sect.title}}</h4>
-				<div class="row overviewscreen-sect-graph" ng-if="sect.graph.length > 0 && !sect.error">
+				<div class="row sect-graph" ng-if="sect.graph.length > 0 && !sect.error">
 					<!-- grpah here -->
 					<div class="dc-chart chartSwitch pie"
 
@@ -30,14 +30,25 @@
 					<p>{{sect.error}}</p>
 				</div>
 
-				<div class="row overviewscreen-list" ng-if="sect.items.length > 0 && !sect.error">
-					<div class="row overviewscreen-sect-header">
+				<div class="row list" ng-if="sect.items.length > 0 && !sect.error">
+					<div class="row sect-header">
 						<div class="col-xs-8"><small><strong>{{sect.colNameA}}</strong></small></div>
 						<div class="col-xs-4"><small><strong>{{sect.colNameB}}</strong></small></div>
 					</div>
 
-					<div class="row overviewscreen-li" ng-repeat="item in sect.items">
-						<div class="col-xs-8"><small><strong>{{item.term}}</strong></small></div>
+					<div class="row li" ng-repeat="item in sect.items">
+						<div class="col-xs-8 label-container">
+							<a class="label label-default"
+								ng-attr-id="legend-{{item.id}}"
+								ng-style="{'background-color': colourMap[item.id]}"
+								ng-mouseover="highlightPieSlice(item.id)"
+
+								data-toggle="tooltip"
+								data-placement="bottom"
+								data-html="true"
+							>&nbsp;</a>
+							<small><strong>{{item.term}}</strong></small>
+						</div>
 						<div class="col-xs-4">
 							<span>
 								<div class="dc-chart chartSwitch line"
@@ -72,7 +83,7 @@
 	</div>
 
 	<div class="col-sm-3 col-xs-0">
-		<div class="sidebar overviewscreen-sb">
+		<div class="sidebar">
 			<div class="title">Overview</div>
 
 			<div class="content">
